--- a/EmployeeLeaveManagement/Views/Account/AddEmployee.cshtml
+++ b/EmployeeLeaveManagement/Views/Account/AddEmployee.cshtml
@@ -93,8 +93,8 @@
                             <option value="0">All</option>
                             <option value="1">HR</option>
                             <option value="2">Project Manager</option>
-                            <option value="3">Developer</option>
-                            <option value="4">QA</option>
+                            <option value="3">Employee</option>
+                            
 
                         </Select>
                         @*<input type="text" class="form-control" id="txtRoleID" placeholder="Enter RoleID" name="RoleID" required="required" />
