--- a/EmployeeLeaveManagement/Views/Leave/LeaveRequest.cshtml
+++ b/EmployeeLeaveManagement/Views/Leave/LeaveRequest.cshtml
@@ -17,7 +17,7 @@
             </div>
         </div>*@
             <div class="form-row">
-                <div class="form-group col-sm-6">
+                <div class="form-group col-sm-auto">
                     <label for="txtName">Start Date</label>
                     <input type="date" class="form-control" id="txtStartDate" placeholder="dd-mm-yyyy" value=" " min="DateTime.today" max="2030-12-31" name="StartDate" required="required" />
                     <div class="valid-feedback">
@@ -29,9 +29,9 @@
                 </div>
 
                 <div class="form-row">
-                    <div class="form-group col-sm-6">
-                        <label for="txtName">Start Date</label>
-                        <input type="date" class="form-control" id="txtStartDate" placeholder="dd-mm-yyyy" value=" " min="DateTime.today" max="2030-12-31" name="EndDate" required="required" />
+                    <div class="form-group col-sm-auto">
+                        <label for="txtName">End Date</label>
+                        <input type="date" class="form-control" id="txtEndDate" placeholder="dd-mm-yyyy" value=" " min="DateTime.today" max="2030-12-31" name="EndDate" required="required" />
                         <div class="valid-feedback">
                             Looks good!
                         </div>
@@ -45,13 +45,6 @@
             </div>
            
             <div class="form-row">
-                @*<div class="form-group col-sm-6">
-            <label for="txtEmail">Email</label>
-            @Html.HiddenFor(temp => temp.Email)
-            <span>@Model.Email</span>
-        </div>*@
-
-
 
                 <div class="form-group col-sm-12">
                     <label for="exampleFormControlTextarea1">Leave Reason</label>
@@ -59,6 +52,7 @@
                 </div>
                 @Html.ValidationSummary()
                 <button type="submit" class="btn btn-primary">Apply</button>
+                </div>
 
 </form>
     </div>
