--- a/EmployeeLeaveManagement/Views/Leave/LeaveUpdation.cshtml
+++ b/EmployeeLeaveManagement/Views/Leave/LeaveUpdation.cshtml
@@ -16,7 +16,7 @@
                         <thead>
                             <tr>
                                 
-                                <th>Employee Name</th>
+                                <th>Employee ID</th>
                                 <th>From Date</th>
                                 <th>To Date</th>
                                 <th>Description</th>
@@ -31,7 +31,7 @@
                             {
                             <tr>
                                 
-                                <td>@item.FirstName @item.LastName</td>
+                                <td>@item.EmployeeID</td>
                                 <td>@item.StartDate.ToString("dd-MMMM-yyyy")</td>
                                 <td>@item.EndDate.ToString("dd-MMMM-yyyy")</td>
                                 <td>@item.LeaveReason</td>
