--- a/EmployeeLeaveManagement/Views/Account/AddEmployee.cshtml
+++ b/EmployeeLeaveManagement/Views/Account/AddEmployee.cshtml
@@ -82,6 +82,10 @@
                         Password and Confirm Password do not match.
                     </div>
                 </div>
+                <div class="form-group">
+                    <label for="Image">User Image</label>
+                    @{Html.RenderPartial("ImageView"); }
+                </div>
             </div>
 
             <div class="form-row">
@@ -97,13 +101,7 @@
                             
 
                         </Select>
-                        @*<input type="text" class="form-control" id="txtRoleID" placeholder="Enter RoleID" name="RoleID" required="required" />
-                <div class="valid-feedback">
-                    Looks good!
-                </div>
-                <div class="invalid-feedback">
-                    Please enter name [alphabets only].
-                </div>*@
+                       
                     </div>
                 </div>
 
