--- a/EmployeeLeaveManagement/Views/Shared/ImageView.cshtml
+++ b/EmployeeLeaveManagement/Views/Shared/ImageView.cshtml
@@ -1,2 +1,2 @@
-﻿<label for="img">Upload Photo:</label>
-<input type="file" id="img" name="img" accept="image/*">
+﻿
+<input type="file" class="form-control-file" id="Image" name="ImageURL" />
